# FinSight

./: .env.example  .gitignore  INTERVIEW.md  README.md  pyproject.toml  requirements.txt
finsight/: __init__.py
finsight/agent/: __init__.py  orchestrator.py
finsight/api/: __init__.py  main.py
finsight/mcp_server/: __init__.py  server.py
finsight/mcp_server/tools/: __init__.py  announcements.py  filings.py  fundamentals.py  peers.py  price.py  sentiment.py
finsight/mcp_server/utils/: __init__.py  validators.py
finsight/ui/: app.py
tests/: __init__.py  test_announcements.py  test_api.py  test_filings.py  test_fundamentals.py  test_orchestrator.py  test_peers.py  test_price.py  test_scaffold.py  test_sentiment.py
ui/: app.py
