[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight"
version = "0.1.0"
description = "Production-grade AI stock research agent using MCP and Claude."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
